--- a/client_server/views/index.hbs
+++ b/client_server/views/index.hbs
@@ -1,9 +1,11 @@
 <header>
-  <h3>Butter</h3>
+  <h3>Jerk-less</h3>
 </header>
-<div class="about">
-  <h3>About</h3>
+<div class="body-wrapper">
+
+  <div id='map'></div>
   <p>
-    Butter is a multipurpose tool that first tracks how smooth a bike ride is and then maps the results.
+    Jerk-less is an ios tool that measures acceleration “jerks”
   </p>
+
 </div>
