--- a/client_server/public/stylesheets/style.css
+++ b/client_server/public/stylesheets/style.css
@@ -3,7 +3,7 @@ body{
 }
 
 header {
-  background: rgb(255, 243, 138);
+  background: rgb(102, 147, 187);
   height: 60px;
   display: flex;
   flex-flow: row nowrap;
@@ -12,4 +12,11 @@ header {
 
 header h3 {
   margin-left: 20px;
+}
+
+#map {
+  position: absolute;
+  width: 100%;
+  height: 80%;
+  margin-right: 30px;
 }
