removed geofactory. added setinterval to geo navigator function. merged accel and geo data obj together

--- a/ionic/www/css/style.css
+++ b/ionic/www/css/style.css
@@ -1,9 +1,16 @@
 .bar-header{
   background: rgb(195, 63, 63);
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
   font-weight: 900 !important;
+  color: #17484A !important;
+}
+
+#less {
   color: white !important;
 }
 
