--- a/client_server/views/layout.hbs
+++ b/client_server/views/layout.hbs
@@ -10,6 +10,6 @@
 </head>
 <body>
   {{{body}}}
-  <script src="/javascripts/app.js" charset="utf-8" type="text/javascript"></script>
+  <script src="/javascripts/bundle.js" charset="utf-8" type="text/javascript"></script>
 </body>
 </html>
