successfully added mtn bike switch - colors are reassigned when true. also disabled scrolling

--- a/ionic/www/css/style.css
+++ b/ionic/www/css/style.css
@@ -20,14 +20,15 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 5px;
 }
 
 .button {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 210px;
-  height: 210px;
+  width: 200px;
+  height: 200px;
   border-radius: 50%;
   border: 5px solid black;
 }
@@ -52,6 +53,7 @@
 
 .card {
   margin-top: 70px;
+  height: 200px;
 }
 
 .magJerk-holder{
