refactored button -fail

--- a/ionic/www/css/style.css
+++ b/ionic/www/css/style.css
@@ -43,10 +43,11 @@
 }
 
 .button p {
-  margin-left: 40px;
+  margin-left: 30px;
+  font-size: 20px;
 }
 
-.button-internal{
+#button-internal{
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -65,25 +66,25 @@
   margin-top: -20px;
 }
 
-.stateOne {
+.on {
   opacity: 1;
-  transform: scale(1, 1);
 }
 
-.stateTwo {
+.off {
   opacity: .5;
-  transform: scale(1.9, 1.9);
+  transform: scale(2, 2);
 }
 
-#circle {
+.red {
   margin-top: -200px;
   z-index: -1;
   background-color: rgb(195, 63, 63);
   border-radius: 50%;
   height: 200px;
   width: 200px;
-  transition: transform .2s ease-in-out, opacity .2s ease-in-out;
+  border: 5px solid black;
 }
+
 
 ion-toggle {
   position: absolute;
