--- a/client_server/public/stylesheets/style.css
+++ b/client_server/public/stylesheets/style.css
@@ -8,6 +8,7 @@ header {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
+  justify-content: space-between;
 }
 
 header h3 {
@@ -15,6 +16,13 @@ header h3 {
   font-family: frenchy;
   font-size: 40px;
   color: white;
+}
+
+header img {
+  margin-right: 20px;
+  height: 30px;
+  width: auto;
+  cursor: pointer;
 }
 
 #map {
