--- a/client_server/public/stylesheets/style.css
+++ b/client_server/public/stylesheets/style.css
@@ -11,11 +11,15 @@ header {
   justify-content: space-between;
 }
 
-header h3 {
+#logo {
   margin-left: 20px;
+}
+
+header h3 {
   font-family: frenchy;
   font-size: 40px;
   color: white;
+  margin: 0px;
 }
 
 header img {
@@ -35,4 +39,18 @@ header img {
 #jerk {
   text-shadow: 1px 1px 1px black;
   color: black;
+}
+
+#about {
+  cursor: pointer;
+}
+
+.right {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: baseline;
+}
+
+.right img {
+  margin-left: 15px;
 }
