--- a/client_server/public/stylesheets/style.css
+++ b/client_server/public/stylesheets/style.css
@@ -9,6 +9,7 @@ header {
   flex-flow: row nowrap;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 17px;
 }
 
 #logo {
@@ -22,6 +23,18 @@ header h3 {
   margin: 0px;
 }
 
+.title {
+  font-family: frenchy;
+  font-size: 40px;
+  margin: 0px;
+}
+
+.header {
+  margin: 0px;
+  font-family: frenchy;
+  font-size: 30px;
+}
+
 header img {
   margin-right: 20px;
   height: 30px;
@@ -33,10 +46,10 @@ header img {
   margin-top: -17px;
   position: absolute;
   width: 100%;
-  height: 91%;
+  height: 82%;
 }
 
-#jerk {
+.jerk {
   text-shadow: 1px 1px 1px black;
   color: black;
 }
@@ -53,4 +66,75 @@ header img {
 
 .right img {
   margin-left: 15px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0px;
+  background: rgb(195, 63, 63);
+  height: 60px;
+  width: 100vw;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+}
+
+footer img {
+  height: 40px;
+  width: auto;
+}
+
+footer a {
+  display: flex;
+  align-items: center;
+}
+
+.modal {
+  background: rgba(255, 255, 255, 0.7);
+  position: absolute;
+  top: 60px;
+  width: 100vw;
+  height: 82%;
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  overflow: scroll;
+}
+
+.modal p {
+  margin-bottom: 10px;
+  margin-top: 0px;
+  font-family: Helvetica;
+}
+
+#inline-jerk {
+  font-size: 20px;
+}
+
+.screen-shots {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  width: 100vw;
+}
+
+.image-holder {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 200px;
+  align-items: center;
+  text-align: center;
+}
+
+.image-holder img {
+  height: 250px;
+  width: auto;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.section {
+  padding: 20px;
+  text-align: center;
 }
